[package]
name = "proxy-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
thiserror = { version = "1.0.47" }
reqwest = { version = "0.11.20" }
